--- a/views/submit.pug
+++ b/views/submit.pug
@@ -35,6 +35,8 @@ head
     margin-left: 8px;
     font-size: 0.8rem;
     width: 180px;
+    position: absolute;
+    bottom: 4px;
     }
 .container
   img(src='../static/Img/checked.png' alt='')
