--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,22 +4,17 @@
     scroll-behavior: smooth;
 }
 
+/* html, body {
+    height: 100%;
+  } */
+
 body {
     color: white;
-    margin: 0;
-    padding: 0;
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
-}
-
-
-#second {
-    position: absolute;
     width: 100vw;
-    height: 100vh;
+    /* height: 100vh; */
     background-color: rgba(0, 0, 0, 0.952);
-    z-index: -10;
-    overflow-x: hidden;
 }
 
 /* Nav bar / Header */
@@ -28,13 +23,14 @@ nav {
     align-items: center;
     justify-content: space-around;
     height: 82px;
-    position: sticky;
+    position: fixed;
     width: 100vw;
     top: 0;
     z-index: 10001;
     border-bottom: 1px solid white;
     background-color: rgb(15, 1, 17);
 }
+
 
 nav .left {
     cursor: pointer;
@@ -62,90 +58,162 @@ nav ul li a {
     top: 10px;
 }
 
-nav ul li a:after {
-    background: none repeat scroll 0 0 transparent;
-    bottom: 0;
-    content: "";
-    display: block;
-    height: 4px;
-    left: 50%;
-    position: absolute;
-    background: #ffffff;
-    transition: width 0.3s ease 0s, left 0.3s ease 0s;
-    width: 0;
-}
-
-nav ul li a:hover:after {
-    width: 100%;
-    left: 0;
-    background-color: #c56fec;
-}
-
-nav ul li a:hover {
-    animation: shaking 0.5s 1;
-}
-
-@keyframes shaking {
-    0% {
-        transform: rotate(0deg);
+@media (hover:hover) {
+    nav ul li a:after {
+        background: none repeat scroll 0 0 transparent;
+        bottom: 0;
+        content: "";
+        display: block;
+        height: 4px;
+        left: 50%;
+        position: absolute;
+        background: #ffffff;
+        transition: width 0.3s ease 0s, left 0.3s ease 0s;
+        width: 0;
     }
 
-    100% {
-        transform: rotate(2deg);
+    nav ul li a:hover:after {
+        width: 100%;
+        left: 0;
+        background-color: #c56fec;
+    }
+
+    #project:hover {
+        #dropdowncontent {
+            display: flex;
+            justify-content: center;
+            background-color: transparent;
+            border: 2px solid rgba(255, 255, 255, 0.5);
+            border-radius: 14px;
+            backdrop-filter: blur(15px);
+        }
+    }
+
+    .cardcontent img:hover {
+        transform: scale(1.02);
+    }
+
+    .card-bodycontent a:hover {
+        background-color: black;
+    }
+
+    .buttons a:hover {
+        background: #03e9f4;
+        color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 0 5px #03e9f4,
+            0 0 25px #03e9f4,
+            0 0 50px #03e9f4,
+            0 0 100px #03e9f4;
+    }
+
+    .card-body a:hover {
+        background-color: black;
+        opacity: 0.8;
+        color: white;
+        border-radius: 24px;
+        border: 1.5px solid white;
+    }
+
+    .footer ul li a:hover {
+        opacity: 0.5;
     }
 }
+
+@media (hover:none) {
+    nav ul li a:after {
+        background: none repeat scroll 0 0 transparent;
+        bottom: 0;
+        content: "";
+        display: block;
+        height: 4px;
+        left: 50%;
+        position: absolute;
+        background: #ffffff;
+        width: 0;
+        /* Initially hidden */
+        transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    }
+
+    nav ul li a:active:after {
+        width: 100%;
+        /* Expands on tap or focus */
+        left: 0;
+        background-color: #c56fec;
+    }
+
+    .buttons a:active {
+        background: #03e9f4;
+        color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 0 5px #03e9f4,
+            0 0 25px #03e9f4,
+            0 0 50px #03e9f4,
+            0 0 100px #03e9f4;
+    }
+
+    .card-body .btn:active {
+        background-color: black;
+        opacity: 0.8;
+        color: white;
+        border-radius: 24px;
+        border: 1.5px solid white;
+    }
+
+    .footer ul li:active {
+        opacity: 0.5;
+    }
+}
+
 /* offcanvas  */
-.offcanvas{
+.offcanvas {
     --bs-offcanvas-width: 628px;
 }
-.offcanvas-title{
-    font-family:monospace;
+
+.offcanvas-title {
+    font-family: monospace;
 }
-.offcanvas-subheading h5{
-    text-align:center;
-    color:purple;
-    font-weight:bold;
-    margin-top:10px;
+
+.offcanvas-subheading h5 {
+    text-align: center;
+    color: purple;
+    font-weight: bold;
+    margin-top: 10px;
 }
-.offcanvas-body p{
-    color:#ada8a8e0;
-    font-family:serif;
+
+.offcanvas-body p {
+    color: #ada8a8e0;
+    font-family: serif;
 }
-.highlightabouttext{
-    color:rgb(202, 195, 195);
+
+.highlightabouttext {
+    color: rgb(202, 195, 195);
 }
-#linkedinlink{
-    color:rgb(29, 29, 196);
+
+#linkedinlink {
+    color: rgb(29, 29, 196);
     cursor: pointer;
-    border-bottom:1px solid blue;
+    border-bottom: 1px solid blue;
 }
-#offcanvasbtn{
-    background-color:purple;
-    color:white;
-    margin:10px 0;
-    padding:4px;
+
+#offcanvasbtn {
+    background-color: purple;
+    color: white;
+    margin: 10px 0;
+    padding: 4px;
     border-radius: 10px;
-    border:none;
-    text-transform:lowercase;
+    border: none;
+    text-transform: lowercase;
 }
+
 /* hover menu */
 #dropdowncontent {
     position: absolute;
     display: none;
     right: 14%;
-    width: 52vw;
+    width: 65vw;
     height: 20rem;
-}
-
-#project:hover {
-    #dropdowncontent {
-        display: flex;
-        justify-content: center;
-        background-color: transparent;
-        border: 2px solid rgba(255, 255, 255, 0.5);
-        border-radius: 14px;
-        backdrop-filter: blur(15px);
-    }
+    top: 84%;
 }
 
 #dropdowncontent .rowcontent {
@@ -161,10 +229,6 @@ nav ul li a:hover {
     margin-top: 2px;
     border-radius: 14px;
     cursor: pointer;
-}
-
-.cardcontent img:hover {
-    transform: scale(1.02);
 }
 
 .cardcontent {
@@ -190,10 +254,6 @@ nav ul li a:hover {
     border: 1px solid rgba(255, 255, 255, 0.774);
 }
 
-.card-bodycontent a:hover {
-    background-color: black;
-}
-
 /* header finished */
 
 /* Main section */
@@ -208,7 +268,7 @@ nav ul li a:hover {
 /* Main section - left section */
 .leftsection {
     display: flex;
-    position: absolute;
+    position:relative;
     bottom: 50px;
     height: 50%;
     width: 80%;
@@ -218,34 +278,77 @@ nav ul li a:hover {
     font-size: 2rem;
 }
 
-.reveal {
+#reveal1{
     position: relative;
-    transform: translateX(-700px);
-    opacity: 1;
-    transition: all 1s ease-in-out;
+    transform: translateX(-100%);
+    animation: transformreveal1 1.5s ease forwards;
+}
+@keyframes transformreveal1 {
+    to{
+        transform:translateX(0);
+    }
+}
+#reveal2 {
+    position: relative;
+    transform: translateX(130%);
+    animation: transformreveal2 1.5s ease forwards;
+}
+@keyframes transformreveal2 {
+    to{
+        transform:translateX(0);
+    }
 }
 
-.reveal2 {
-    position: relative;
-    transform: translateX(700px);
-    opacity: 1;
-    transition: all 1s ease-in-out;
-}
 
-.reveal.active,
-.reveal2.active {
-    transform: translateX(0);
-    opacity: 1;
+/* Mobile specific reveals */
+@media (max-width: 768px) {
+    html {
+        height: -webkit-fill-mode;
+        width: -webkit-fill-mode;
+    }
+    body {
+        height:100svh;
+        width:100svw;
+        overflow-x: hidden;
+    }
+    .firstsection{
+        overflow:hidden;
+    }
+    #reveal1{
+        position: relative;
+        transform: translateX(-100%);
+        animation: transformreveal1 1s ease forwards;
+    }
+    @keyframes transformreveal1 {
+        to{
+            transform:translateX(0);
+        }
+    }
+    #reveal2{
+        position: relative;
+        transform: translateX(200%);
+        animation: transformreveal2 1s ease forwards;
+    }
+    @keyframes transformreveal2 {
+        to{
+            transform:translateX(0);
+        }
+    }
 }
 
 .leftsection p {
-    width: 35%;
+    width: 45%;
     padding: 2px;
-    background-color: #1d225a54;
-    border-radius: 16px;
-    font-size: 1.7rem;
     position: relative;
     left: 130px;
+    /* border:1px solid red; */
+}
+
+#element1 {
+    font-size: 1.7rem;
+    border-radius: 16px;
+    background-color: #1d225a54;
+    padding-right: 27px;
 }
 
 .leftsection p i {
@@ -291,7 +394,7 @@ nav ul li a:hover {
 
 #element2 {
     color: rgb(255, 6, 255);
-    width: 60%;
+    width: 75%;
     font-weight: 300;
     margin-left: 80px;
     position: relative;
@@ -307,7 +410,8 @@ nav ul li a:hover {
     font-size: 1.3rem;
     position: relative;
     left: 160px;
-
+    height: 6rem;
+    top: 10px;
 }
 
 #purple {
@@ -334,6 +438,7 @@ nav ul li a:hover {
     position: relative;
     left: 15%;
     top: 60px;
+    width: 60%;
 }
 
 .firstsection .buttons a {
@@ -354,15 +459,7 @@ nav ul li a:hover {
     letter-spacing: 4px
 }
 
-.buttons a:hover {
-    background: #03e9f4;
-    color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #03e9f4,
-        0 0 25px #03e9f4,
-        0 0 50px #03e9f4,
-        0 0 100px #03e9f4;
-}
+
 
 .buttons a span {
     position: absolute;
@@ -469,19 +566,7 @@ main hr {
     display: flex;
     flex-direction: column;
     max-width: 100vw;
-    margin: 80px 0px;
 }
-
-/* .reveal3{
-    position: relative;
-    transform:translateY(150px);
-    opacity:0;
-}
-.reveal3.active2{
-    transform: translateY(0px);
-    opacity:1;
-} */
-
 
 @keyframes rex2 {
     0% {
@@ -530,19 +615,31 @@ main hr {
 }
 
 /* Project heading */
-#projectdetail h2 {
+/* #projectdetail h2 {
     text-align: center;
     color: purple;
-    padding: 0px 0px 30px 0px;
+    margin-bottom:30px;
+} */
+#Project {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: purple;
+    margin: 70px;
 }
 
 /* Tool section (Common section) */
-#toolsdetail h2{
+#toolsdetail{
+    margin-top:100px;
+}
+#toolsdetail h2 {
     text-align: center;
-    color:purple;
+    color: purple;
     margin-top: 100px;
 }
-#projectdetail h2 span, #toolsdetail h2 span{
+
+#Project h2 span,
+#toolsdetail h2 span {
     background-color: rgba(34, 32, 32, 0.479);
     border: 1px solid purple;
     border-radius: 10px;
@@ -555,121 +652,180 @@ main hr {
     -webkit-text-stroke-color: rgba(158, 29, 141, 0.788);
 }
 
-/* Projexts carousel */
+#Project h2 {
+    padding: 21px;
+}
 
-#carouselExampleCaptions {
+/* Projects carousel */
+
+#carouselExample {
+    position: relative;
+    transform: translateX(-100%);
+}
+
+@keyframes transformcarousel {
+    to {
+        transform: translateX(0);
+    }
+}
+/* @keyframes transformcarouselback {
+    to {
+        transform: translateX(-100%);
+    }
+} */
+
+.carousel-inner {
+    position: relative;
+}
+
+.carousel-item {
     position: relative;
 }
 
 .carousel-item>img {
     filter: blur(8px);
+    max-width: 100%;
+    max-height: 80vh;
 }
 
-.carousel-control-prev i,.carousel-control-next i  {
-    font-size: 4em;
+.carousel-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%;
 }
 
-.card.carousel-img {
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    max-width:90%;
-   
+.carousel-card {
+    max-width: 100%;
+}
+
+.carusel-img img {
+    max-height: 350px;
 }
 
 .card-body {
     background-color: rgba(203, 90, 218, 0.685);
+    display: flex;
+    flex-direction: column;
 }
 
 .card-body h5 {
     font-weight: bolder;
-    padding-left: 8px;
 }
 
 .card-body h5 span {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     font-weight: 100;
     position: relative;
     bottom: 3px;
     left: 5px;
 }
 
-.card-body a {
+.card-title {
+    font-size: 1.5rem;
+}
+
+.card-body .btn {
     background-color: black;
     font-size: 0.8rem;
     color: white;
     border-radius: 24px;
-}
-
-.card-body a:hover {
-    background-color: black;
-    opacity: 0.8;
-    color: white;
-    border-radius: 24px;
+    width: 37%;
+    font-size: 1rem;
 }
 
 .card-text {
-    font-weight: bolder;
-    padding: 4px;
+    font-family:serif;
+    font-size: 1.25rem;
 }
 
+.carousel-control-prev,
+.carousel-control-next {
+    font-size: 2.5rem;
+    color: #c410d1;
+    position: absolute;
+    top: 50%;
+    height: 41px;
+    width: 50px;
+}
+
+.carousel-control-prev {
+    left: 10%;
+}
+
+.carousel-control-next {
+    right: 10%;
+}
+
+
+/* Add media queries for different screen sizes if needed */
+
 /* Tools content */
-.box{
-    display:flex;
-    flex-wrap:wrap;
-    border-radius:15px;
-    background-color:rgb(158, 26, 158);
-    width:50vw;
-    height:fit-content;
-    margin-top:80px;
-    align-self:center;
-    justify-content:center;
+.box {
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 15px;
+    background-color: rgb(158, 26, 158);
+    width: 50vw;
+    height: fit-content;
+    margin-top: 80px;
+    margin-bottom: 90px;
+    align-self: center;
+    justify-content: center;
 }
-.box .items{
-    display:flex;
-    justify-content:center;
-    align-items:center;
+
+.box .items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 9px;
-    font-size:0.8rem;
+    font-size: 0.8rem;
     font-weight: 600;
-    background-color:#000;
-    width:20%;
-    height:60px;
-    margin:25px;
+    background-color: #000;
+    width: 20%;
+    height: 60px;
+    margin: 25px;
 }
-.box #items1{
-    background-image:url("../Img/react.png");
+
+.box #items1 {
+    background-image: url("../Img/react.png");
     background-repeat: no-repeat;
-    background-position:20px;
+    background-position: 20px;
 }
-.box #items2{
-    background-image:url("../Img/nodejs.png");
+
+.box #items2 {
+    background-image: url("../Img/nodejs.png");
     background-repeat: no-repeat;
-    background-position:20px;
+    background-position: 20px;
 }
-.box #items3{
-    background-image:url("../Img/mongodb.png");
+
+.box #items3 {
+    background-image: url("../Img/mongodb.png");
     background-repeat: no-repeat;
-    background-position:10px;
+    background-position: 10px;
 }
-.box #items4{
-    background-image:url("..//Img/javascript.png");
+
+.box #items4 {
+    background-image: url("..//Img/javascript.png");
     background-repeat: no-repeat;
-    background-position:10px;
+    background-position: 10px;
 }
-.box #items5{
-    background-image:url("../Img/ServiceNow.png");
+
+.box #items5 {
+    background-image: url("../Img/ServiceNow.png");
     background-repeat: no-repeat;
-    background-position:10px;
+    background-position: 10px;
 }
-.box #items6{
-    background-image:url("../Img/Jupyternotebook.png");
+
+.box #items6 {
+    background-image: url("../Img/Jupyternotebook.png");
     background-repeat: no-repeat;
-    background-position:10px;
-    background-size:20%;
-    
+    background-position: 10px;
+    background-size: 20%;
+
 }
+
 /* Footer */
 .footer {
     display: flex;
@@ -710,12 +866,14 @@ main hr {
     align-items: center;
     margin: 21px 12px;
 }
-.footer ul li a{
-    height:60px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
+
+.footer ul li a {
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .footer ul li:nth-child(1) {
     background-color: #333;
 }
@@ -732,10 +890,6 @@ main hr {
     background-color: #9b1da7;
 }
 
-.footer ul li:hover {
-    opacity: 0.6;
-}
-
 .footer ul li a {
     text-decoration: none;
     padding: 0 50px;
@@ -745,9 +899,11 @@ main hr {
 .footer ul li a i {
     margin-right: 15px;
 }
-.fa-brands,.fa-regular{
+
+.fa-brands,
+.fa-regular {
     position: relative;
-    left:10px;
+    left: 10px;
 }
 
 .footer p {
