Mongodb database and env variable updated

--- a/views/index.pug
+++ b/views/index.pug
@@ -62,21 +62,21 @@ nav#navbar
               img.card-img-top(src='../static/Img/TextUtils.png' alt='...')
               .card-bodycontent
                 h3.card-titlecontent TextUtils
-                a.btn(href='http://64.227.176.178')
+                a.btn(href='https://text-utils-jade.vercel.app/' target="_blank")
                   | Visit 
                   i.fa-solid.fa-arrow-up-right-from-square
             .cardcontent
               img.card-img-top(src='../static/Img/PGLife.png' alt='...')
               .card-bodycontent
                 h3.card-titlecontent PG Life
-                a.btn(href='http://146.190.9.56/')
+                a.btn(href='http://146.190.9.56/' target="_blank")
                   | Visit 
                   i.fa-solid.fa-arrow-up-right-from-square
             .cardcontent
               img.card-img-top(src='../static/Img//Gym.png' alt='...')
               .card-bodycontent
                 h3.card-titlecontent Gym Website
-                a.btn(href='http://64.227.176.178:3000/')
+                a.btn(href='http://64.227.176.178:3000/' target="_blank")
                   | Visit 
                   i.fa-solid.fa-arrow-up-right-from-square
       li
@@ -125,7 +125,7 @@ main#main
                 p.card-text
                   | A web application built using react to help user
                   | to analyze text and manipulate with it.
-                a.btn(href='http://64.227.176.178')
+                a.btn(href='https://text-utils-jade.vercel.app/' target="_blank")
                   | Visit 
                   i.fa-solid.fa-arrow-up-right-from-square
         .carousel-item
@@ -140,7 +140,7 @@ main#main
                 p.card-text
                   | A LAMP stack website where one can find the perfect
                   | accommodation.
-                a.btn(href='http://146.190.9.56/')
+                a.btn(href='http://146.190.9.56/' target="_blank")
                   | Visit 
                   i.fa-solid.fa-arrow-up-right-from-square
         .carousel-item
@@ -155,7 +155,7 @@ main#main
                 p.card-text
                   | A GYM website built using pure pug and node.Js where user can
                   | book class.
-                a.btn(href='http://64.227.176.178:3000/')
+                a.btn(href='http://64.227.176.178:3000/' target="_blank")
                   | Visit 
                   i.fa-solid.fa-arrow-up-right-from-square
       button.carousel-control-prev(type='button' data-bs-target='#carouselExample' data-bs-slide='prev')
