--- a/views/contact.pug
+++ b/views/contact.pug
@@ -3,7 +3,7 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Tushar - contact me
-  link(rel='stylesheet' href='../static/css/contact.css')
+  link(rel='stylesheet' href='../public/css/contact.css')
   link(rel='preconnect' href='https://fonts.googleapis.com')
   link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" crossorigin="anonymous">
@@ -13,11 +13,11 @@ script(src='https://kit.fontawesome.com/9c5fe3b840.js' crossorigin='anonymous')
     nav
       ul
         li#left
-          a(href='/', alt='') Tushar&apos;s Portfolio
+          a(href='/' alt='') Tushar&apos;s Portfolio
         li#right
           a(href='/')
             i.fa-regular.fa-circle-xmark.fa-xl
-    img(src='../static/Img/boy.png' alt='')
+    img(src='../public/Img/boy.png' alt='')
 #section
   section
     h3 Thanks for taking the time to reach out. How can I help you today?
@@ -43,4 +43,4 @@ script(src='https://kit.fontawesome.com/9c5fe3b840.js' crossorigin='anonymous')
             | Subscribe me
         .button 
           button(type="submit") Submit
-script(src='../static/js/contact.js')
+script(src='../public/js/contact.js')
