--- a/views/submit.pug
+++ b/views/submit.pug
@@ -39,7 +39,7 @@ head
     bottom: 4px;
     }
 .container
-  img(src='/public/Img/checked.png' alt='')
+  img(src='/static/Img/checked.png' alt='')
   h2 Thank You!
   h5 Your submission has been received.
 #footer-redirect
@@ -47,4 +47,4 @@ head
     | Redirectiong in 
     span#countdown 3
     |  seconds
-script(src='/public/js/submit.js')
+script(src='/static/js/submit.js')
